@@ -181,7 +181,7 @@ namespace Castle.MicroKernel.Tests.Registration
 		public void RegisterTypes_WithLinq_RegisteredInContainer()
 		{
 			kernel.Register(AllTypes.Of<CustomerChain1>()
-				.Pick(from type in Assembly.GetExecutingAssembly().GetTypes()
+				.Pick(from type in Assembly.GetExecutingAssembly().GetExportedTypes()
 					  where type.IsDefined(typeof(SerializableAttribute), true)
 					  select type
 					));
@@ -238,5 +238,30 @@ namespace Castle.MicroKernel.Tests.Registration
 			Assert.AreEqual(1, handlers.Length);		
 		}
 #endif	
+
+		[Test]
+		public void RegisterAssemblyTypes_OnlyPublicTypes_WillNotRegisterNonPublicTypes()
+		{
+			kernel.Register(
+				AllTypes.FromAssembly(Assembly.GetExecutingAssembly())
+					.BasedOn<NonPublicComponent>()
+					);
+
+			IHandler[] handlers = kernel.GetHandlers(typeof(NonPublicComponent));
+			Assert.AreEqual(0, handlers.Length);
+		}
+
+		[Test]
+		public void RegisterAssemblyTypes_IncludeNonPublicTypes_WillNRegisterNonPublicTypes()
+		{
+			kernel.Register(
+				AllTypes.FromAssembly(Assembly.GetExecutingAssembly())
+					.IncludeNonPublicTypes()
+					.BasedOn<NonPublicComponent>()
+					);
+
+			IHandler[] handlers = kernel.GetHandlers(typeof(NonPublicComponent));
+			Assert.AreEqual(1, handlers.Length);
+		}
 	}
 }
